--- a/myproject/templates/components/base.html
+++ b/myproject/templates/components/base.html
@@ -48,7 +48,7 @@
         {% load sweetify %}
         {% sweetify %}
     </div>
-    <footer class="bg-light  text-center footer ">
+    <footer class="bg-light  text-center footer pt-3">
         <span class="text-center .text-muted ">
             © 2021 Copyright:
         </span>
