--- a/myproject/templates/queue/createNowQueueModal.html
+++ b/myproject/templates/queue/createNowQueueModal.html
@@ -8,7 +8,7 @@
          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
        </div>
        <div class="modal-body">
-         <div class="card p-3 rounded-3 border border-3" style="">
+         <div class="card p-3  border border-3" style="">
            <img src="{{restaurant.getCoverPic}}" class="img imgBg" alt="Responsive image" />
            <img src="{{restaurant.getProfilePic}}" class="img imgCollabM" alt="Responsive image" />
            <div class="row" style="margin-top:50px ;">
