--- a/myproject/templates/restaurants/createBusModal.html
+++ b/myproject/templates/restaurants/createBusModal.html
@@ -9,7 +9,7 @@
              </div>
              <div class="modal-body">
                  <h1>Edit Profile</h1>
-                 <div class="card p-3 rounded-3 border border-3 " style="">
+                 <div class="card p-3  border border-3 " style="">
                      <ul class="nav nav-tabs" id="myTab" role="tablist">
                          <li class="nav-item" role="presentation">
                              <a class="nav-link active" id="restaurant-tab" data-bs-toggle="tab"
