--- a/myproject/templates/components/menuModal.html
+++ b/myproject/templates/components/menuModal.html
@@ -7,7 +7,7 @@
          <h5 class="modal-title" id="exampleModalLabel"></h5>
        </div>
        <div class="modal-body">
-         <div class="card p-3 rounded-3 border border-3" style="">
+         <div class="card p-3  border border-3" style="">
            <div class="row">
              <img src="{% static 'images/foodEx.jpg' %}" class="imgBg" alt="Responsive image" />
              <img src="{% static 'images/foodEx2.jpg' %}" class="imgCollab" alt="Responsive image" />
@@ -49,7 +49,7 @@
          <h5 class="modal-title" id="exampleModalLabel"></h5>
        </div>
        <div class="modal-body">
-         <div class="card p-3 rounded-3 border border-3" style="">
+         <div class="card p-3  border border-3" style="">
            <div class="row">
              <img src="{% static 'images/foodEx.jpg' %}" class="imgBg" alt="Responsive image" />
              <img src="{% static 'images/foodEx2.jpg' %}" class="imgCollab" alt="Responsive image" />
