--- a/myproject/templates/restaurants/indexResCard.html
+++ b/myproject/templates/restaurants/indexResCard.html
@@ -1,7 +1,7 @@
 {% load static %}
 
 <div class="col-md-4 All {{restaurant.categoryID.fullCate}}" id="card-filter">
-    <div class="card p-3 mb-2 rounded-3 border border-3 ">
+    <div class="card p-3 mb-2  border border-3 ">
         <a href="{% url 'resCard' restaurant.resID %}">
             <img src="{{restaurant.getProfilePic}}" class="card-img img-cover resImg mx-auto d-block "
                 style="height: 200px;">
