--- a/myproject/templates/restaurants/map.html
+++ b/myproject/templates/restaurants/map.html
@@ -1,7 +1,7 @@
 {% load static %}
 <div class="row justify-content-center mt-4">
     <div class="col-xl-8 ">
-        <div class="card p-3 rounded-3 border border-3" style="">
+        <div class="card p-3  border border-3" style="">
             <div class="row ">
                 {% comment %} <div id="map"></div> {% endcomment %}
             </div>
