--- a/myproject/templates/restaurants/editRoleModal.html
+++ b/myproject/templates/restaurants/editRoleModal.html
@@ -1,6 +1,7 @@
 {% for staff in staffs %}
 <!-- Modal -->
-<div class="modal fade" id="editRole{{staff.memberID}}" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" id="editRole{{staff.memberID}}" tabindex="-1" aria-labelledby="exampleModalLabel"
+    aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header border-0 align-self-start">
@@ -14,14 +15,7 @@
                     <form action="{% url 'editRole' pk %}" method="POST">
                         {% csrf_token %}
                         {{form.as_table}}
-                        {% comment %} <input type="text" value="{{staff.memberID}}" name="id" class="btn btn-primary" hidden>
-                        <select class="form-select d-inline " name="groups" aria-label="Default select example"
-                            style="width: 50%;">
-                            <option value="" disabled selected hidden>{{staff.groups.get.name}}</option>
-                            {% for role in roles %}
-                            <option value="">{{role}}</option>
-                            {% endfor%}
-                        </select> {% endcomment %}
+
                         <input type="submit" value="Submit" class="btn btn-primary">
                     </form>
                 </div>
