--- a/myproject/templates/restaurants/removeStaffModal.html
+++ b/myproject/templates/restaurants/removeStaffModal.html
@@ -16,7 +16,7 @@
                 </button>
                 <form action="{% url 'removeStaff' pk %}" method="POST">
                     {% csrf_token %}
-                    <input type="text" class="form-control" id="name" name="id" hidden value="{{staff.memberID}}">
+                    <input type="text" class="form-control" id="name" name="memberID" hidden value="{{staff.memberID}}">
                     <input type="text" class="form-control" id="name" name="resID" hidden value="">
                     <button type="submit" class="btn btn-danger">Confirm</button>
                 </form>
