--- a/myproject/templates/users/profile.html
+++ b/myproject/templates/users/profile.html
@@ -121,14 +121,14 @@
                             <table class="table">
                                 <thead>
                                     <tr>
-                                        <th scope="col">#</th>
+                                        <th scope="col">ID</th>
                                         <th scope="col">Restaurant</th>
                                     </tr>
                                 </thead>
                                 <tbody>
                                     {% for restaurant in company.restaurant_set.all  %}
                                     <tr>
-                                        <th scope="row">1</th>
+                                        <th scope="row">{{restaurant.resID}}</th>
                                         <td>
                                             <a href="{% url 'profile' restaurant.resID %}">
                                                 <p>{{restaurant.resName}}</p>
