--- a/myproject/templates/admin/admin.html
+++ b/myproject/templates/admin/admin.html
@@ -10,38 +10,36 @@
     <div class="mb-3" style="overflow-x: hidden; overflow-y : scroll; height : 600px">
       <table class="table">
         <thead>
-          <tr>
-            <th scope="col">#</th>
-            <th scope="col">Restaurant</th>
+          <tr class="text-center align-middle">
+
+            <th scope="col">ID</th>
             <th scope="col">Company</th>
+            <th scope="col">Restaurant</th>
             <th scope="col">Report</th>
           </tr>
         </thead>
         <tbody id="Table">
-          <tr>
-            <th scope="row">1</th>
+          {% for company in companies %}
+          <tr class="text-center align-middle">
+            <th scope="row">{{company.companyID}}</th>
             <td>
-              <a href="#">เจ๊โอว</a>
+              <a href="{% url 'profile' company.companyID %}" class="h6">{{company.companyName}}</a>
             </td>
             <td>-</td>
-            <td>1</td>
+            <td><button type="button" class="btn btn-primary"> Report </button></td>
           </tr>
-          <tr>
-            <th scope="row">2</th>
+          {% endfor %}
+          {% for restaurant in restaurants %}
+          <tr class="text-center align-middle">
+            <th scope="row">{{restaurant.resID}}</th>
             <td>
-              <a href="#">เจ๊แขกแหกปาก</a>
+              <a href="{% url 'profile' restaurant.companyID %}" class="h6">{{restaurant.companyID.companyName}}</a>
             </td>
-            <td>-</td>
-            <td>95</td>
+            <td><a href="{% url 'profile' restaurant.resID %}" class="h6">{{restaurant.resName}}</a></td>
+            <td><button type="button" class="btn btn-primary"> Report </button></td>
           </tr>
-          <tr>
-            <th scope="row">3</th>
-            <td>
-              <a href="#">Shabushi</a>
-            </td>
-            <td>Oishi</td>
-            <td>10</td>
-          </tr>
+          {% endfor %}
+
         </tbody>
       </table>
     </div>
