--- a/myproject/templates/admin/registerRequest.html
+++ b/myproject/templates/admin/registerRequest.html
@@ -17,7 +17,7 @@
         <input class="form-control mt-3 mb-3 ms-3" id="myInput" type="text" placeholder="Search.." style="width : 95%">
         <br>
         <div class="mb-3" style="overflow-x: hidden; overflow-y : scroll; height : 600px">
-            <table class="table">
+            <table class="table border border-3">
                 <thead>
 
                     <tr class="text-center align-middle">
