--- a/myproject/templates/queue/queue.html
+++ b/myproject/templates/queue/queue.html
@@ -1,7 +1,7 @@
 {% load static %}
 {% block content %}
 
-<table class="table table-md" id="test">
+<table class="table table-md border border-3 myTable" id="test">
 	<thead>
 		<tr class="text-center">
 			<th scope="col">Queue</th>
