--- a/myproject/templates/restaurants/managerHome.html
+++ b/myproject/templates/restaurants/managerHome.html
@@ -9,7 +9,7 @@
             <input class="form-control mt-4 mb-3" id="Search" type="text" placeholder="Search..">
             <br>
             <div class="mb-3" style="overflow-x: hidden; overflow-y : scroll; height : 600px">
-                <table class="table">
+                <table class="table border border-3">
                     <thead>
                         <tr>
                             <th scope="col">#</th>
