--- a/myproject/static/css/style.css
+++ b/myproject/static/css/style.css
@@ -65,3 +65,13 @@ input::-webkit-inner-spin-button {
   -webkit-appearance: none;
   margin: 0; /* <-- Apparently some margin are still there even though it's hidden */
 }
+
+.impact {
+  font-weight: 700;
+  font-size: 50px;
+}
+
+.myTable {
+  border-spacing: 10px;
+  background-color: #ffffff;
+}
