--- a/myproject/templates/components/companyProfile.html
+++ b/myproject/templates/components/companyProfile.html
@@ -114,7 +114,7 @@
                 </div>
                 <div class="tab-pane fade pb-5" id="branch" role="tabpanel" aria-labelledby="branch-tab">
                     <div class="history-container mb-3" style="overflow-x: hidden; overflow-y : scroll; height : 325px">
-                        <table class="table">
+                        <table class="table border border-3">
                             <thead>
                                 <tr>
                                     <th scope="col">#</th>
