--- a/myproject/templates/components/userProfile.html
+++ b/myproject/templates/components/userProfile.html
@@ -105,7 +105,7 @@
                 </div>
                 <div class="tab-pane fade " id="profile" role="tabpanel" aria-labelledby="profile-tab">
                     <div class="history-container mb-3" style="overflow-x: hidden; overflow-y : scroll; height : 325px">
-                        <table class="table">
+                        <table class="table border border-3">
                             <thead>
                                 <tr>
                                     <th scope="col">#</th>
