--- a/myproject/templates/restaurants/removeStaffModal.html
+++ b/myproject/templates/restaurants/removeStaffModal.html
@@ -8,7 +8,7 @@
                 <h5 class="modal-title" id="exampleModalLabe3">Delete Confirmation</h5>
             </div>
             <div class="modal-body">
-                <h5>Are you sure you wat to delete Menu?</h5>
+                <h5>Are you sure you want to remove {{staff.fullName}}?</h5>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
