--- a/myproject/templates/components/navbar.html
+++ b/myproject/templates/components/navbar.html
@@ -87,8 +87,42 @@
 
                         </td>
                     </tr>
-                    {% elif user.role ==  "staff" or user.role ==  "manager" or user.role ==  "executive" %}
+                    {% elif  user.role ==  "executive" %}
                     <tr>
+                        <td>
+                            <h5 class="card-title d-flex justify-content-start">Company : </h5>
+                        </td>
+                        <td>
+                            <h5 class="card-title d-flex justify-content-center">{{profile.companyID}}</h5>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <h6 class="card-subtitle mb-2 text-muted d-flex justify-content-start">Restaurant :</h6>
+                        </td>
+                        <td>
+                            <h5 class="card-subtitle mb-2 text-muted d-flex justify-content-center"> None</h5>
+                        </td>
+                    </tr>
+                    {% elif user.role ==  "staff" or user.role ==  "manager" and user.resID is not None%}
+                        <tr>
+                        <td>
+                            <h5 class="card-title d-flex justify-content-start">Company : </h5>
+                        </td>
+                        <td>
+                            <h5 class="card-title d-flex justify-content-center">{{user.resID.companyID.companyName}}</h5>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <h6 class="card-subtitle mb-2 text-muted d-flex justify-content-start">Restaurant :</h6>
+                        </td>
+                        <td>
+                            <h5 class="card-subtitle mb-2 text-muted d-flex justify-content-center"> {{user.resID.resName}}</h5>
+                        </td>
+                    </tr>
+                    {% else %}
+                        <tr>
                         <td>
                             <h5 class="card-title d-flex justify-content-start">Company : </h5>
                         </td>
