--- a/myproject/templates/restaurants/removeStaffModal.html
+++ b/myproject/templates/restaurants/removeStaffModal.html
@@ -18,6 +18,7 @@
                     {% csrf_token %}
                     <input type="text" class="form-control" id="name" name="memberID" hidden value="{{staff.memberID}}">
                     <input type="text" class="form-control" id="name" name="resID" hidden value="">
+                    <input type="text" class="form-control" id="name" name="role" hidden value="staff">
                     <button type="submit" class="btn btn-danger">Confirm</button>
                 </form>
             </div>
