--- a/myproject/templates/restaurants/manageStaff.html
+++ b/myproject/templates/restaurants/manageStaff.html
@@ -17,10 +17,10 @@
     <div class="row border mb-3">
         <h2 class="mt-3">Invite</h2>
         <div class="col-md-6">
-            <form action="{% url 'inviteStaff' request.user.resID %}" method="post">
+            <form action="{% url 'inviteStaff' pk %}" method="post">
                 {% csrf_token %}
                 <input class="form-control m-3" id="myInput" type="text" name="resID" hidden
-                    value="{{request.user.resID}}">
+                    value="{{pk}}">
                 <input class="form-control m-3" id="myInput" type="email" name="email">
         </div>
         <div class="col-md-6">
