--- a/myproject/templates/components/sidebar.html
+++ b/myproject/templates/components/sidebar.html
@@ -38,7 +38,7 @@
                     <use xlink:href="#home"></use>
                 </svg>
                 Queue
-            </a> 
+            </a>
             <a href="{%url 'staffHome' request.user.resID  %}" class="nav-link text-white" aria-current="page"
                 data-bs-toggle="modal" data-bs-target="#business" href="#home">
                 <svg class="bi me-2" width="16" height="16">
@@ -59,6 +59,18 @@
                     Edit menu
                 </a>
             </li>
+
+            {% if  user.role == "manager" %}
+            <li>
+                <a href="{%url 'dashboard'%}" class="nav-link text-white">
+                    <svg class="bi me-2" width="16" height="16">
+                        <use xlink:href="#table"></use>
+                    </svg>
+                    DashBoard
+                </a>
+            </li>
+            {% endif %}
+
         </ul>
     </div>
     <hr>
@@ -118,10 +130,20 @@
                     Edit menu
                 </a>
             </li>
+            <li>
+                <a href="{%url 'dashboard'%}" class="nav-link text-white">
+                    <svg class="bi me-2" width="16" height="16">
+                        <use xlink:href="#table"></use>
+                    </svg>
+                    DashBoard
+                </a>
+            </li>
         </ul>
     </div>
     <hr>
 </div>
 {% endif %}
+
+
 
 {% include 'restaurants/createBusModal.html' %}
